<resources>
    <string name="app_name">KeyAssist</string>
    <string name="app_about">关于</string>
    <string name="accessibility_label">帮助您完成物理按键映射的修改。\n\n目前支持原生 ROM，如 Lineage 以及 Lineage 的衍生版本。支持一加手机的氢OS各个版本，需要锁定本软件不被清理，或者手动修改『多任务清除方式』。</string>

    <string name="cat_status">功能</string>
    <string name="cat_key_press">按键</string>
    <string name="cat_software">软件</string>

    <string name="pref_enabled">启用</string>
    <string name="pref_interval">灵敏度(数字越小越灵敏)</string>
    <string name="pref_home_press">Home 短按</string>
    <string name="pref_home_long_press">Home 长按</string>
    <string name="pref_back_press">Back 短按</string>
    <string name="pref_back_long_press">Back 长按</string>
    <string name="pref_recent_press">Recent 短按</string>
    <string name="pref_recent_long_press">Recent 长按</string>
    <string name="pref_about">关于</string>
    <string name="pref_opensource">开源信息</string>

    <string name="pval_default">默认</string>
    <string name="pval_none">无</string>
    <string name="pval_enabled">已启动</string>
    <string name="pval_disabled">未启动</string>

    <string name="donate_no_alipay">没有安装支付宝客户端</string>
    <string name="donate_no_wechat">没有安装微信客户端</string>
    <string name="donate_alipay">捐赠(支付宝)</string>
    <string name="donate_wechat">捐赠(微信)</string>

    <string name="donate_msg">如果您支持我的工作，请给予一个捐赠，以便我能在后续为软件加入更多功能，感谢您的支持</string>
</resources>
